--- a/php/src/application/pages/Finance/Cash/Statements.phtml
+++ b/php/src/application/pages/Finance/Cash/Statements.phtml
@@ -14,6 +14,8 @@
     ->addColumn('supplier', 'Email')
     ->addColumn('balance', 'Balance')
     ->addColumn('volume', 'Volume')
+    
     ->addOption('supplier', '{supplier}')
+    ->addOption('email', '{supplier}/email')
     ?>
     
