--- a/php/src/application/layouts/scripts/panel.phtml
+++ b/php/src/application/layouts/scripts/panel.phtml
@@ -54,7 +54,7 @@
     <div class="btm">
         <span>(c) <?=date('Y')?> TechnoPark Corp., 
         rev.<?=FaZend_Revision::get()?>, <?=$this->pageLoadTime()?><br/>
-        your IP: <?=$_SERVER['REMOTE_ADDR']?></span>
+        your IP: <?=$_SERVER['REMOTE_ADDR']?>, load avg: <?=implode(', ', sys_getloadavg())?></span>
     </div>
 
     <?=$this->headScript() ?>
