publish supplier registry

--- a/php/src/application/pages/PMO/Suppliers.phtml
+++ b/php/src/application/pages/PMO/Suppliers.phtml
@@ -1,3 +1,5 @@
+<?=$this->publish($this->root->supplierRegistry)?>
+
 <? $this->includeCSS('pages/PMO/Suppliers.css') ?>
 
 <h1>Staff Requests for Suppliers</h1>
