show rate for all suppliers

--- a/php/src/application/pages/PMO/Suppliers/requests/_any.phtml
+++ b/php/src/application/pages/PMO/Suppliers/requests/_any.phtml
@@ -33,7 +33,7 @@
     <? else: ?>
     
         <p><?=$item->quality?>%: <b><?=$item->supplier->name?></b>
-        (<?=$item->supplier->email?>)</p>
+        (<?=$item->supplier->email?>), <?=$item->supplier->rate?></p>
     
     <? endif; ?>
 
