--- a/php/src/application/views/scripts/static/index.phtml
+++ b/php/src/application/views/scripts/static/index.phtml
@@ -62,7 +62,7 @@
         <div class="right">
             <ul class="steps">
 
-                <?=$this->render('static/liveperson.phtml')?>
+                <!-- ?=$this->render('static/liveperson.phtml')? -->
 
                 <? if ($this->article->steps): ?>
                     <? foreach($this->article->steps as $step):?>
