project objectives PAGE introduced

--- a/php/src/application/pages/projects/_any/Integration/Metrics/set/_any.phtml
+++ b/php/src/application/pages/projects/_any/Integration/Metrics/set/_any.phtml
@@ -12,5 +12,6 @@
     ->addField('submit')
         ->fieldValue('Save')
         ->fieldAction($metric, 'setTarget')
+        ->fieldAttrib('class', 'btn')
     ?>
     
