--- a/php/src/application/pages/projects/_any/Integration.phtml
+++ b/php/src/application/pages/projects/_any/Integration.phtml
@@ -1,6 +1,8 @@
 <h1>Integration Management</h1>
 
 <?=$this->bar()
+    ->setStyle('stairs')
+    ->addLink('Objectives', 'Objectives')
     ->addLink('Metrics', 'Project Metrics')
     ->addLink('EVA', 'Earned Value Analysis')
     ?>
