publish gantt chart

--- a/php/src/application/pages/projects/_any/Time/GanttChart.phtml
+++ b/php/src/application/pages/projects/_any/Time/GanttChart.phtml
@@ -1,3 +1,5 @@
+<?=$this->publish($this->project->schedule)?>
+
 <? $this->includeCSS('pages/projects/_any/Time/GanttChart/table.css') ?>
 
 <h1>Gantt Chart</h1>
