give unique names to deliverables

--- a/php/src/application/pages/wobots/_any.phtml
+++ b/php/src/application/pages/wobots/_any.phtml
@@ -4,7 +4,7 @@
 
 <?=$this->bar()
     ->addLink('decisions', 'Decisions')
-    ->addLink('clean', 'Clean')
+    ->addLink('clean', 'Clean entire history')
     ?>
 
 <?=$this->table()
