simple traceability introduced

--- a/php/src/application/pages/projects/_any/Scope.phtml
+++ b/php/src/application/pages/projects/_any/Scope.phtml
@@ -6,4 +6,5 @@
     ->addLink('SRS', 'Software Requirements Specification (SRS)')
     ->addLink('DesignModel', 'Design Model')
     ->addLink('AnalysisModel', 'Analysis Model')
+    ->addLink('Traceability', 'Traceability Matrix')
     ?>
