--- a/php/src/application/pages/wobots/_any.phtml
+++ b/php/src/application/pages/wobots/_any.phtml
@@ -14,6 +14,8 @@
     ->addColumn('created', 'Date')
     ->addColumn('getTitle', 'Title')
     ->addColumn('result', 'Decision made')
+        ->addFormatter('->isError()', 'color:red')
+        ->addFormatter('->isStillRunning()', 'color:gray')
 
     ->addOption('created', 'decisions/{__id}')
     ?>
