--- a/php/src/application/pages/wobots/_any/decisions/_any.phtml
+++ b/php/src/application/pages/wobots/_any/decisions/_any.phtml
@@ -3,6 +3,7 @@
 <p>
     Date: <?=$decision->created?><br/>
     Title: "<?=$decision->getTitle()?>"<br/>
+    Hash: "<?=$decision->hash?>"<br/>
     Decision made: <b><?=$decision->result?><?=$decision->isStillRunning() ? " (RUNNING NOW)" : false?></b>
 </p>
 
