--- a/php/src/application/pages/projects/_any/Scope/SRS/QOS.phtml
+++ b/php/src/application/pages/projects/_any/Scope/SRS/QOS.phtml
@@ -14,6 +14,8 @@
  *
 -->
  
+<?=$this->publish($this->project->deliverables)?>
+
 <h1><?=_t('Quality of Service (QOS)')?></h1>
 
 <?=$this->table()
