show date in layout

--- a/php/src/application/layouts/scripts/panel.phtml
+++ b/php/src/application/layouts/scripts/panel.phtml
@@ -74,7 +74,8 @@
         <?=implode(', ', array_map(
             create_function('$a', '$a = round($a, 2); return $a < 3 ? $a : "<span style=\'color:red;\'>$a</span>";'), 
             sys_getloadavg()
-            ))?></span>
+        ))?></span><br/>
+        <?=Zend_Date::now()?>
     </div>
 
     <?=$this->headScript() ?>
