suffix in metric introduced

--- a/php/src/application/pages/projects/_any/Integration/Metrics.phtml
+++ b/php/src/application/pages/projects/_any/Integration/Metrics.phtml
@@ -38,7 +38,7 @@
     ->setCollection($this->project->metrics, 'name', '/')
     ->addAttrib('class', 'tree')
     ->setMask('%s: <b>%s</b>/%s/%s/%s')
-    ->addToken('->name')
+    ->addToken('->suffix')
     ->addToken('->value')
     ->addToken('->default')
     ->addToken('->target')
