statement calculation fixed and tested

--- a/php/src/application/pages/wobots.phtml
+++ b/php/src/application/pages/wobots.phtml
@@ -27,7 +27,7 @@
     ->addBehavior('flash', 'POS was clean out successfully')
     ->addBehavior('redirect')
     ->addField('submit', 'submit')
-        ->fieldValue('Clean POS Database')
+        ->fieldValue('Clean POS Databasee')
         ->fieldAttrib('class', 'btn')
         ->fieldAction('FaZend_Pos_Properties', 'cleanOut')
     ?>
