--- a/php/src/application/pages/wobots/_any.phtml
+++ b/php/src/application/pages/wobots/_any.phtml
@@ -24,7 +24,7 @@
     ?>
 
 <?=$this->table()
-    ->setSource(Model_Decision_History::retrieveByWobotNonEmpty($this->wobot))
+    ->setSource(Model_Decision_History::retrieveByWobot($this->wobot))
     ->addFormatter('->isRunning()', 'color:gray')
     ->addFormatter('->isError()', 'color:red')
 
